// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Inset Box 1`] = `
<div
  className="MuiBox-root css-16j8nc"
/>
`;

exports[`Storyshots Components/Inset Stack 1`] = `
<div
  className="css-ycb0gu-MuiStack-root"
/>
`;
